--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,3 +3,4 @@
 <p><b>Title:</b> <%= @article.title %></p>
 <p><b>Description:</b> <%= @article.description %> </p>
 <p><b>Created:</b> <%= @article.created_at %> </p>
+<%= link_to "Articles", "/articles" %>
