--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1> Create A New Article </h1>
+<h1> Edit Article </h1> 
 
 <% if @article.errors.any? %> 
   <p><%= @article.errors.full_messages%> </p>
@@ -9,10 +9,9 @@
     <% end %> 
   </ul>
 <% end %>
-  
 
 
-<%= form_with scope: :article, url: articles_path, local: true do |f| %>
+<%= form_with(model: @article, local: true)  do |f| %>
   <p>
     <%= f.label :title %> <br/>
     <%= f.text_field :title %>
