--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,6 +16,7 @@
         <td> <%= link_to "Show" , article_path(article) %> </td>
         <td><%= link_to 'Edit', edit_article_path(article) %> </td>
         <td><%= button_to 'Delete', article_path(article.id), method: :delete %> </td>
+        <td>By <%= article.user.username %></td>
       </tr>
     <% end %>           
   </tbody>
