signup user success

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -24,4 +24,5 @@
 
 <br />
 <%= link_to "New Article", "/articles/new" %> <br />
-<%= link_to "New Article Link", new_article_path %>
+<%= link_to "New Article Link", new_article_path %> <br />
+<%= link_to "Create User", "/signup" %>
