--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,3 @@
-<h1> Create New User </h1>
 
 <%= form_with(model: @user, local: true)  do |f| %>
   <p>
@@ -17,7 +16,7 @@
   </p>
 
   <p>
-    <%= f.submit "Sign Up" %>   
+    <%= f.submit(@user.new_record? ? "Sign Up" : "Update Account") %>   
   </p>
 <%end%>
 
