--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,28 +1,9 @@
 <h1>Article Index Page</h1>
 
-<table>
-  <thead>
-    <tr>      
-      <th>Title</th>
-      <th>Description</th>
-      <th>Action</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr>      
-        <td><%= article.title %></td>
-        <td> <%= article.description %> </td>
-        <td> <%= link_to "Show" , article_path(article) %> </td>
-        <td><%= link_to 'Edit', edit_article_path(article) %> </td>
-        <td><%= button_to 'Delete', article_path(article.id), method: :delete %> </td>
-        <td>By <%= article.user.username %></td>
-      </tr>
-    <% end %>           
-  </tbody>
-</table>
+<%= render 'article' %>
 
 <br />
 <%= link_to "New Article", "/articles/new" %> <br />
 <%= link_to "New Article Link", new_article_path %> <br />
-<%= link_to "Create User", "/signup" %>
+<%= link_to "Create User", "/signup" %> <br />
+<%= link_to "User List", "/users" %>
