--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,13 +13,15 @@
       <tr>      
         <td><%= user.username %></td>
         <td> <%= user.email %> </td>
-       <td><%= link_to 'Edit', edit_user_path(user) %> </td>
+         <td> <%= link_to "Show" , user_path(user) %> </td>
+        <td><%= link_to 'Edit', edit_user_path(user) %> </td>
       </tr>
     <% end %>           
   </tbody>
 </table>
 
 <br />
+<%= link_to "Articles", "/articles" %> <br />
 <%= link_to "New Article", "/articles/new" %> <br />
 <%= link_to "New Article Link", new_article_path %> <br />
 <%= link_to "Create User", "/signup" %>
