--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,11 @@
 <div class="container"> 
-  <h1> AlphaBlog <h1>
+  <div class="jumbotron home-jumbo">
+    <h1 class="display-4 home-p">Alpha Blog</h1>
+    <p class="lead home-p">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <hr class="my-4">
+    <p class="home-p">It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <div class="home-button-div">
+       <%= link_to "Sign Up!", '/signup', class: "btn btn-primary btn-lg home-button" %>
+    </div>      
+  </div>
 </div>
