style article submit and update

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,3 +21,12 @@
   margin-bottom: 50px;
   width: 75%;
 }
+
+.article-submit {
+  width: 20%;
+  margin-top: 10px;
+}
+
+.form-group {
+  margin-top: 10px !important;
+}
