--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -31,3 +31,13 @@
   background-color: rgb(18, 204, 18);
   border: 2px black solid;
 }
+
+.title {
+  margin-top: 30px;
+  text-align: center;
+}
+
+.navigation {
+  // text-align: center !important;
+  margin: auto;
+}
