--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container"> 
-  <h1>Article Index Page</h1>
+  <h1 class="title">Articles</h1>
   <%= will_paginate @articles %>
   <%= render 'article' %>
 </div>
