--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
   <body>
     <%= render 'layouts/navigation' %>
-    <%= render 'layouts/messages'%>
+    <%# <%= render 'layouts/messages'%> 
     <%= yield %>
   </body>
 </html>
