--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,31 +1,6 @@
-<h1> Create A New Article </h1>
-
-<% if @article.errors.any? %> 
-  <p><%= @article.errors.full_messages%> </p>
-  <h2>The following errors prevented the article from being saved</h2> 
-  <ul> 
-    <% @article.errors.full_messages.each do |msg| %> 
-      <li><%= msg %></li> 
-    <% end %> 
-  </ul>
-<% end %>
-  
 
 
-<%= form_with scope: :article, url: articles_path, local: true do |f| %>
-  <p>
-    <%= f.label :title %> <br/>
-    <%= f.text_field :title %>
-  </p>
-
-  <p>
-    <%= f.label :description %><br/>
-    <%= f.text_area :description %>
-  </p>
-
-  <p>
-    <%= f.submit %>   
-  </p>
-<%end%>
-
-<%= link_to "Articles", "/articles" %>
+<div id="page-content">
+  <h1 class="text-center mt-4">New Article</h1>
+  <%= render 'form' %>
+</div>
