--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -25,7 +25,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+             <%= link_to "New Article", '/articles/new', class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+             <%= link_to "Sign Up", '/signup', class: "nav-link" %>
           </li>
         </ul>
         <form class="d-flex">
