style user_create and users_index

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,3 +30,14 @@
 .form-group {
   margin-top: 10px !important;
 }
+
+#sticky-footer {
+  flex-shrink: none;
+}
+
+.user-container {
+  text-align: center;
+}
+body{
+  background-color: lightgray;
+}
