--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,3 +1,8 @@
-  <%# <% flash.each do |name, msg| %>
-    <%# <%= msg %>
-  <%# <% end %> 
+<%# <div class="container from_messages_partial"> %>
+  <% flash.each do |name, msg| %>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        <%= msg %>
+    </div>
+  <% end %>
+<%# <div> %>
