--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
   </head>
   <body>
     <%= render 'layouts/navigation' %>
-    <%# <%= render 'layouts/messages'%> 
+    <%= render 'layouts/messages'%> 
     <%= yield %>
+    <%= render 'layouts/footer'%> 
   </body>
 </html>
