--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,23 +1,23 @@
-
-<%= form_with(model: @user, local: true)  do |f| %>
-  <p>
-    <%= f.label :username %> <br/>
-    <%= f.text_field :username %>
-  </p>
-
-  <p>
-    <%= f.label :email %><br/>
-    <%= f.email_field :email %>
-  </p>
-
-  <p>
-    <%= f.label :password %><br/>
-    <%= f.password_field :password %>
-  </p>
-
-  <p>
-    <%= f.submit(@user.new_record? ? "Sign Up" : "Update Account") %>   
-  </p>
-<%end%>
-
-<%= link_to "Articles", "/articles" %>
+<div class="container"> 
+  <div class="row justify-content-center">
+     <div class="col-7">
+      <%= form_with(model: @user, local: true)  do |f| %>
+        <div class="form-group">
+          <%= f.label :username %> 
+          <%= f.text_field :username, class: "form-control", placeholder: "Username" %>
+        </div>
+        <div class="form-group">
+           <%= f.label :email %><br/>
+           <%= f.email_field :email, class: "form-control", placeholder: "Email" %>          
+        </div>
+        <div class="form-group">
+          <%= f.label :password %><br/>
+          <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+        </div>        
+        <div class="form-group row justify-content-center">
+            <%= f.submit class: "btn btn-outline-success btn-lg article-submit" %>
+        </div>
+      <%end%>
+    </div>
+  </div>
+</div> 
