--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,30 +1,3 @@
-<h1>User Index Page</h1>
+<h1 class="text-center mt-4"> Users</h1>
+<%= render 'user' %>
 
-<table>
-  <thead>
-    <tr>      
-      <th>Username</th>
-      <th>Email</th>
-      <th>Action</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>      
-        <td><%= user.username %></td>
-        <td> <%= user.email %> </td>
-        <%# <td> <%= gravatar_for(user), size: 150 %> </td> %> %>
-         <td> <%= link_to "Show" , user_path(user) %> </td>
-        <td><%= link_to 'Edit', edit_user_path(user) %> </td>
-        <td><%= pluralize(user.articles.count, "article") %> </td>
-        <td>Joined <%= time_ago_in_words(user.created_at) %> </td>
-      </tr>
-    <% end %>           
-  </tbody>
-</table>
-
-<br />
-<%= link_to "Articles", "/articles" %> <br />
-<%= link_to "New Article", "/articles/new" %> <br />
-<%= link_to "New Article Link", new_article_path %> <br />
-<%= link_to "Create User", "/signup" %>
