--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,14 @@
 <div class="container"> 
   <h1 class="title">Articles</h1>
-  <%= will_paginate @articles %>
+  
+  <div class="flickr_pagination">    
+    <%= will_paginate @posts, :container => false %>
+  </div>
+
   <%= render 'article' %>
+
+  <div class="flickr_pagination">    
+    <%= will_paginate @posts, :container => false %>
+  </div>
 </div>
 
