--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,12 @@
 <h1 class="text-center mt-4"> Users</h1>
+
+<div class="flickr_pagination">    
+  <%= will_paginate @posts, :container => false %>
+</div>
+
 <%= render 'user' %>
+
+<div class="flickr_pagination">    
+  <%= will_paginate @posts, :container => false %>
+</div>
 
