--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,18 @@
 <h1 class="text-center mt-4"> <%= @user.username%>'s Profile Page</h1>
 <div class="container user-container">
-  <%= image_tag("spartan.png", :alt => "profile_pic", :class => "img-thumbnail user-index" ) %>     
+  <%= image_tag("spartan.png", :alt => "profile_pic", :class => "img-thumbnail user-index" ) %> <br/>
+  <%= link_to "Edit Profile", edit_user_path(@user) %>    
 </div>
 
 <% if @user.articles.any? %>
-  <h4 class="text-center mt-4"> Articles </h4>
+  <h4 class="text-center mt-4"> <%= @user.username %>'s Articles </h4>
+  <div class="flickr_pagination">    
+    <%= will_paginate @articles, :container => false %>
+  </div>
   <%=render :partial => "articles/article" if @user.articles %>
+  <div class="flickr_pagination">    
+    <%= will_paginate @articles, :container => false %>
+  </div>
 <% else %>
   <h4 class="text-center mt-4"> No Articles Posted Yet </h4>
 <% end %>
