login and redirect users

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -26,13 +26,23 @@
           </li>
           <li class="nav-item">
              <%= link_to "New Article", '/articles/new', class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-             <%= link_to "Sign Up", '/signup', class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-             <%= link_to "Log In", '/login', class: "nav-link" %>
-          </li>
+          </li>          
+          <% if logged_in? %>
+            <li class="nav-item">              
+              <%= button_to "Logout", logout_path, class: "nav-link logout", method: :post%>
+            </li>
+            <li class="nav-item">              
+              <%= link_to current_user.username, user_path(current_user), class: "nav-link"%>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to "Sign Up", '/signup', class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Log In", '/login', class: "nav-link" %>
+            </li>
+          <% end %>
+     
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
