--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,10 @@
 .navbar {
    background-color: black !important;
+  }
+  
+  .logout {
+    border: none;
+    background-color: black !important;
 }
 
 .navbar-brand {
