--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,9 +2,9 @@
    background-color: black !important;
   }
   
-  .logout {
-    border: none;
-    background-color: black !important;
+.logout {
+  border: none;
+  background-color: black !important;
 }
 
 .navbar-brand {
@@ -91,3 +91,20 @@ i {
     margin-right: 1em; }
   .flickr_pagination .next_page {
     margin-left: 1em; }
+  
+  .button-group {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+  }
+  .group-b {
+    margin-left: 2px;
+    margin-right: 2px;
+  }
+
+  .dropdown-b {
+    color: black;
+    border: none;
+    background-color: white
+  }
