--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,32 +7,46 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">            
-            <%= link_to "Articles", '/articles', class: "nav-link" %>
-          </li>
-          <li class="nav-item">
+           <li class="nav-item">
             <%= link_to "Users", '/users', class: "nav-link" %>
-          </li>
+          </li>        
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+             Articles
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+               <li class="nav-item">            
+                <%= link_to "Articles", '/articles', class: "dropdown-item" %>
+              </li>
+               <% if logged_in? %>
+                <li class="nav-item">
+                  <%= link_to "New Article", '/articles/new', class: "dropdown-item" %>
+                </li>
+              <% end %>
+              <li><hr class="dropdown-divider"></li>       
             </ul>
           </li>
-          <li class="nav-item">
-             <%= link_to "New Article", '/articles/new', class: "nav-link" %>
-          </li>          
+
           <% if logged_in? %>
-            <li class="nav-item">              
-              <%= button_to "Logout", logout_path, class: "nav-link logout", method: :post%>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <%= current_user.username%>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li class="nav-item">            
+                  <%= link_to "View Profile", user_path(current_user), class: "dropdown-item" %>
+                </li>               
+                <li class="nav-item">
+                  <%= link_to "Edit Profile", edit_user_path(current_user), class: "dropdown-item" %>
+                </li>
+                <li><hr class="dropdown-divider"></li>       
+                <li class="nav-item">
+                    <%= button_to "Delete Profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete %>
+                </li>              
+              </ul>
             </li>
             <li class="nav-item">              
-              <%= link_to current_user.username, user_path(current_user), class: "nav-link"%>
+              <%= button_to "Logout", logout_path, class: "nav-link logout", method: :post%>
             </li>
           <% else %>
             <li class="nav-item">
