--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -8,7 +8,7 @@
       <p class="card-text article-left"> <%= article.description %></p>
       <div class="button-group">
         <%= link_to "View", article_path(article), class: "btn btn-outline-success group-b" %>
-        <% if logged_in? && article.user == current_user%>
+        <% if logged_in? && (article.user == current_user || current_user.admin?)%>
           <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info group-b" %>
           <%= button_to "Delete", article_path(article), class: "btn btn-outline-danger group-b", method: :delete %>
         <% end %>
