--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="card-body">    
       <div class="card-text article-left"> <%= simple_format(@article.description) %></div>
-         <% if logged_in? && @article.user == current_user%>
+         <% if logged_in? && (@article.user == current_user || current_user.admin?)%>
           <div class="button-group">       
             <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info group-b" %>
             <%= button_to "Delete", article_path(@article), class: "btn btn-outline-danger group-b", method: :delete %>
