--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,4 @@
-<h1 class="text-center mt-4"><%= @category.name%> Show Page</h1>
+<h1 class="text-center mt-4"><%= @category.name%></h1>
+<div class="container">
+  <%= render 'articles/article'%>
+</div>
