--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,11 +15,21 @@
               <%= f.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Description of article" %>
             </div>
           </div>
+
+          <div class="form-group row">
+            <%= f.label :category, class: "col-2 col-form-label text-light" %>
+            <div class="col-10"> 
+              <%= f.collection_select(:category_ids, Category.all, :id, :name, 
+                {prompt: "Make your selection from the list below"}, {multiple: true, size: 3, class: "form-select shadow rounded" }) %>
+            </div>
+          </div>
+                  
+
           <div class="form-group row justify-content-center">
             <%= f.submit class: "btn btn-outline-light btn-lg article-submit" %>
           </div>
-        <% end %>
-        <%= link_to '[ Cancel and return to articles listing ]', articles_path, class: "text-info" %>
+        <% end %>        
+      <%= link_to '[ Cancel and return to articles listing ]', articles_path, class: "text-info" %>
       </div>
   </div>
 </div> 
