create hastag category creating

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,6 +11,10 @@
         <div class="card text-center shadow mb-5 bg-white rounded">
           <div class="card-body">
             <h5 class="card-title"><%= link_to category.name, category_path(category), class: "text-success" %></h5>
+            <%= button_to(category_path(category),  method: :delete)  do %>
+              <li class="fa fa-trash"></li>              
+            <% end %>
+            <%# <%= button_to "Delete Profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete %>
           </div>
           <div class="card-footer text-muted">
             <small>Created <%= time_ago_in_words(category.created_at) %> ago, 
