--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -115,3 +115,9 @@ i {
     display: flex;
     flex-direction: row;
   }
+
+  .fa{
+    color: limegreen !important;
+    font-size: 1.5rem;
+    
+  }
