--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -9,13 +9,17 @@
     <div class="row justify-content-md-center">
       <div class="col-8 mt-4">
         <div class="card text-center shadow mb-5 bg-white rounded">
-          <div class="card-body">
+          
+          <div class="card-body cat-body">
             <h5 class="card-title"><%= link_to category.name, category_path(category), class: "text-success" %></h5>
-            <%= button_to(category_path(category),  method: :delete)  do %>
-              <li class="fa fa-trash"></li>              
-            <% end %>
-            <%# <%= button_to "Delete Profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete %>
+            <%= button_to(category_path(category),  method: :delete, class: "delete-cat-fa")  do %>
+              <li class="fa fa-trash delete-category"></li>              
+            <% end %>           
           </div>
+          <div class="text-left">
+            <p class="left"> <%= category.articles.count %> Articles </p>
+          </div>
+
           <div class="card-footer text-muted">
             <small>Created <%= time_ago_in_words(category.created_at) %> ago, 
             edited <%= time_ago_in_words(category.updated_at) %> ago</small>
