--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -83,7 +83,7 @@
         <% if logged_in? && current_user.admin? %>
           <ul class="navbar-nav mb-2 mb-lg-0">      
             <%= link_to(new_article_path) do %>
-              <li class="fa fa-plus-square nav-link"> </li>
+              <li class="fa fa-plus-square nav-link add-nav-bar"> </li>
             <% end %>
             <li class="nav-item"> <a class="nav-link"> Admin </a></li>
           </ul>  
@@ -91,7 +91,7 @@
         <% elsif logged_in? && !current_user.admin? %>
           <ul class="navbar-nav mb-2 mb-lg-0">
             <%= link_to(new_article_path) do %>
-              <li class="fa fa-plus-square nav-link"> </li>
+              <li class="fa fa-plus-square nav-link add-nav-bar"> </li>
             <% end %>           
             <li class="nav-item"><a class="nav-link"> Not Admin </a></li>
           </ul>
