--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,10 @@
-<div class="container"> 
-  <h1 class="title">Articles</h1>
-  
+<div class="container">
+  <% if @search %>
+    <h1 class="title">Search Results For '<%= @search %>'</h1>
+  <% else %>
+    <h1 class="title">Articles</h1>
+  <% end %>
+
   <div class="flickr_pagination">    
     <%= will_paginate @posts, :container => false %>
   </div>
