--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -12,9 +12,11 @@
           
           <div class="card-body cat-body">
             <h5 class="card-title"><%= link_to category.name, category_path(category), class: "text-success" %></h5>
-            <%= button_to(category_path(category),  method: :delete, class: "delete-cat-fa")  do %>
-              <li class="fa fa-trash delete-category"></li>              
-            <% end %>           
+            <% if logged_in? && current_user.admin? %>
+              <%= button_to(category_path(category),  method: :delete, class: "delete-cat-fa")  do %>
+                <li class="fa fa-trash delete-category"></li>              
+              <% end %>           
+            <% end %>      
           </div>
           <div class="text-left">
             <p class="left"> <%= category.articles.count %> Articles </p>
